k8s/service-file-handler.yaml
apiVersion: v1
kind: Service
metadata:
  name: file-handler
  labels:
    app: file-handler
    component: file-storage
spec:
  type: ClusterIP
  ports:
    - port: 3000
      targetPort: 3000
      protocol: TCP
      name: http
  selector:
    app: file-handler

---
apiVersion: v1
kind: Service
metadata:
  name: file-handler-internal
  labels:
    app: file-handler
    component: file-storage
  annotations:
    # Internal service for Ruuter and other services
    service.alpha.kubernetes.io/app-protocols: '{"http":"HTTP"}'
spec:
  type: ClusterIP
  ports:
    - port: 3000
      targetPort: 3000
      protocol: TCP
      name: http
  selector:
    app: file-handler
